# multtestlib

./: .gitignore  LICENSE  comandos.xlsx  pyproject.toml  pyproject.toml.bak  readme.md  sobepacote.bat  sobepacote.bat.bak
Engine 2/: filefail.txt  filetot.txt  test3.py  test4.py  test5.py
Engine 3/: example.py  filefail.txt  filepass.txt  filetot.txt  functions.py  multtestlib3.py  sugestao.py  test.py  test3.py  test5.py  teste2.py
paper/: CTPForm.docx
src/: multtestlib.py
src/multtestlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
