[project]
name = "multtestlib"
version = "1.00"
authors = [
  { name="Ricardo Alvarenga", email="alvarenga.r.ricardo@gmail.com" },
]
description = "Multtestlib, a package developed for performing unit tests in Python using parallel processing."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/alvarengaricardo/multtestlib"

