[project]
name = "multtestlib"
version = "1.2"
authors = [
  { name = "Ricardo Alvarenga", email = "ricardoalvarenga@ita.br" }
]
description = "Multtestlib, a package developed for performing unit tests in Python using multiprocessing."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
homepage = "https://github.com/alvarengaricardo/multtestlib"

