[project]
name = "multtestlib"
version = "1.2.1"  # incrementei para novo build
authors = [
  { name = "Ricardo Alvarenga", email = "ricardoalvarenga@ita.br" }
]
description = "Multtestlib, a package developed for performing unit tests in Python using multiprocessing."
readme = "README.md"

license = "MIT"              # SPDX expression (recomendado)
license-files = ["LICENSE"]  # garante inclusão do arquivo

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/alvarengaricardo/multtestlib"
